[package]
name = "ftdi"
version = "0.0.2"
authors = ["Denis Lisov <dennis.lissov@gmail.com>"]
# edition

description = "A Rust wrapper over libftdi1 library for FTDI devices"
#documentation = ""
#readme = ""
homepage = "https://github.com/tanriol/ftdi-rs"
repository = "https://github.com/tanriol/ftdi-rs"

license = "MIT"
keywords = ["hardware", "ftdi", "libftdi1"]
#categories = []

[dependencies]
libftdi1-sys = "1.0.0-alpha2"
num = "0.1.30"
