[package]
authors = ["Denis Lisov <dennis.lissov@gmail.com>"]
name = "ftdi"
version = "0.1.0"
keywords = ["hardware","ftdi", "libftdi1"]
description = "A Rust wrapper over libftdi1 library for FTDI devices"
license = "MIT"
homepage = "https://github.com/tanriol/ftdi-rs"
repository = "https://github.com/tanriol/ftdi-rs"

[dependencies]
libftdi1-sys = { git = "https://github.com/tanriol/libftdi1-sys", version="1.0.0-alpha2", rev="804d9e8"}
num = "0.1.30"

[features]
bindgen = ["libftdi1-sys/bindgen"]
